# pystandards

./: .gitignore  README.md  pyproject.toml
src/pystandards/: enum.py  ffmpeg.py  file.py  http.py  lang.py
src/pystandards/file/: __init__.py  utils.py
src/pystandards/http/: method.py  mime_type.py
tests/: conftest.py  test_enum.py  test_ffmpeg.py  test_file.py  test_general.py  test_http.py  test_lang.py  test_mixed.py  utils.py
