[project]
name = "pystandards"
version = "0.0.5"
description = "Standards but in Python"
authors = [
    {name = "danialcala94",email = "danielalcalavalera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.14"

[tool.poetry.dependencies]
# Mandatory
yta_validation = { version = ">=0.0.1,<1.0.0", optional = false }
exrex = { version = ">=0.0.1,<9999.0.0", optional = false }
# Optional

[tool.poetry]
packages = [{include = "pystandards", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
markers = [
    "mandatory: mandatory tests for release",
    "additional: exhaustive and demanding tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
